--- a/color.css
+++ b/color.css
@@ -1,5 +1,8 @@
 /*--------------------------------------------------------------
 JP DESIGN SYSTEM: RESPONSIVE COLOR
+by Jeremy Platt 
+   https://jeremyplatt.me
+
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # COLOR PALETTE
