--- a/dark.css
+++ b/dark.css
@@ -1,6 +1,7 @@
 /*--------------------------------------------------------------
 JP DESIGN SYSTEM: RESPONSIVE DARK MODE 
-by Jeremy Platt
+by Jeremy Platt 
+   https://jeremyplatt.me
 
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
