--- a/light.css
+++ b/light.css
@@ -1,5 +1,8 @@
 /*--------------------------------------------------------------
 JP DESIGN SYSTEM: RESPONSIVE LIGHT MODE 
+by Jeremy Platt 
+   https://jeremyplatt.me
+
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # LIGHT MODE COLOR ARRANGEMENT
