--- a/typography.css
+++ b/typography.css
@@ -1,5 +1,7 @@
 /*--------------------------------------------------------------
 JP DESIGN SYSTEM: RESPONSIVE TYPOGRAPHY
+by Jeremy Platt 
+   https://jeremyplatt.me
 
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
