--- a/typography.css
+++ b/typography.css
@@ -11,6 +11,8 @@ by Jeremy Platt
 /* Imports  */
 	/* Google Fonts  */
 	@import url("https://fonts.googleapis.com/css?family=Raleway:400,900&display=swap") screen;
+	@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css') screen;
+
 
 :root {
 	/* Typography Default Mobile / Tall Screen Varibles */
