--- a/typography.css
+++ b/typography.css
@@ -6,6 +6,14 @@ by Jeremy Platt
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Imports
+
+# Typography Default Varibles for Mobile / Tall Screens 
+	# Default Text Characteristics
+	# Default Header Characteristics
+	# Default Layout Text Characteristics
+	# Default Text Modifer Characteristics
+
+# Typography Varibile Changes for Desktop / WIDE Screens
 --------------------------------------------------------------*/
 	
 /* Imports  */
