--- a/typography.css
+++ b/typography.css
@@ -30,7 +30,7 @@ by Jeremy Platt
 	--text-font: 'Raleway', Helvetica, Arial, sans-serif;
 	--text-size: calc(14px + 2vw); /* default text size is equal to 2% of the width of display window + 14px (sets minimum text size for accessibility and still maintains a responsive text size) */
 	--text-weight: 400;
-	--text-spacing: 0.35em; /* spacing between characters is 35% of CURRENT text size (ideal for dyslexia) */
+	--text-spacing: 0.05em; /* spacing between characters is 35% of CURRENT text size (ideal for dyslexia) */
 	--text-lineheight: 1.5em; /* vertical spacing for text height is 1.5x CURRENT(em) text size (ideal for dyslexia)*/ 
 	
 	/* default Header text characteristics */
@@ -40,29 +40,29 @@ by Jeremy Platt
 		--header-lineheight: 1.17em;
 	
 		--h1-font: var(--header-font);
-		--h1-size: 1.67rem;
-		--h1-weight: var(--header-weight);
+		--h1-size: 2rem;
+		--h1-weight: 400;
 		--h1-lineheight: var(--header-lineheight);
 	
 		--h2-font: var(--header-font);
-		--h2-size: 1.5rem;
+		--h2-size: 1.67rem;
 		--h2-weight: var(--header-weight);
 		--h2-lineheight: var(--header-lineheight);
 	
 		--h3-font: var(--header-font);
-		--h3-size: var(--header-size);
-		--h3-weight: var(--header-weight);
+		--h3-size: 1.5rem;
+		--h3-weight: 400;
 		--h3-lineheight: var(--header-lineheight);
 	
 	
 		--h4-font: var(--header-font);
-		--h4-size: var(--header-size);
+		--h4-size: 1.3rem;
 		--h4-weight: var(--header-weight);
 		--h4-lineheight: var(--header-lineheight);
 	
 		--h5-font: var(--header-font);
-		--h5-size: var(--header-size);
-		--h5-weight: var(--header-weight);
+		--h5-size: 1.3rem;
+		--h5-weight: 400;
 		--h5-lineheight: var(--header-lineheight);
 	
 		--h6-font: var(--header-font);
@@ -72,16 +72,18 @@ by Jeremy Platt
 	
 	/* default layout text characteristics */
 		--logo-font: var(--default);
-		--logo-size: var(--default);
-		--logo-weight: var(--default);
+		--logo-size: 2rem;
+		--logo-weight: 900;
 		--logo-lineheight: var(--default);
 
 		--title-font: var(--default);
-		--title-size: var(--default);
+		--title-size: var(--h1-size);
+    --title-weight: var(--h1-weight);
 		--title-lineheight: var(--default);
 
 		--hero-font: var(--default);
-		--hero-size: var(--default);
+		--hero-size: 2.5rem;
+    --hero-weight: var(--h2-weight);
 		--hero-lineheight: var(--default);
 	
 		--footer-font: var(--default);
@@ -90,6 +92,7 @@ by Jeremy Platt
 
 		--social-font: var(--default);
 		--social-size: var(--default);
+    --social-weight: var(--default);
 		--social-lineheight: var(--default);
 	
 	/* default characteristics */
